# storage/openapi.yaml
@@ -89,6 +89,7 @@ components:
       - device_id
       - distance
       - distance_timestamp
+      - end_timestamp
       type: object
       properties:
         athlete_id:
@@ -105,6 +106,10 @@ components:
           type: string
           format: date-time
           example: 2016-08-29T09:12:33Z
+        end_timestamp:
+          type: string
+          format: date-time
+          example: 2016-08-29T09:12:33Z  
     RunningPaceReading:
       required:
       - athlete_id
@@ -112,7 +117,8 @@ components:
       - elevation
       - location
       - pace
-      - pace_timestamp
+      - pce_timestamp
+      - end_timestamp
       type: object
       properties:
         athlete_id:
@@ -132,6 +138,10 @@ components:
           type: string
           format: date-time
           example: 2016-08-29T09:12:33Z
+        end_timestamp:
+          type: string
+          format: date-time
+          example: 2016-08-29T09:12:33Z  
         average_pace:
           type: number
           example: 2.5
